--- a/deep-work-timer/package.json
+++ b/deep-work-timer/package.json
@@ -13,6 +13,7 @@
     "dexie": "^4.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "recharts": "^3.1.0",
     "vite-plugin-pwa": "^1.0.1"
   },
   "devDependencies": {
